--- a/04211.ipynb
+++ b/04211.ipynb
@@ -576,7 +576,7 @@
         "outputId": "e6f4fc7b-cb63-4a9e-b037-b46dd9269132"
       },
       "source": [
-        "train_and_pred(train_features, test_features, train_labels, test_data, num_epochs, lr, weight_decay, batch_sizem)"
+        "train_and_pred(train_features, test_features, train_labels, test_data, num_epochs, lr, weight_decay, batch_size)"
       ],
       "execution_count": 27,
       "outputs": [
