--- a/pytorch/ch2/2_2.ipynb
+++ b/pytorch/ch2/2_2.ipynb
@@ -73,7 +73,7 @@
         "x = torch.arange(12)\n",
         "x"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -103,7 +103,7 @@
       "source": [
         "x.shape"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -133,7 +133,7 @@
       "source": [
         "x.shape[0]"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -163,7 +163,7 @@
       "source": [
         "x.size()    # 和 shape 一样"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +194,7 @@
         "X = x.view(3, 4)\n",
         "X"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
       "source": [
         "torch.zeros(2, 3, 4)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,16 +253,16 @@
       "metadata": {
         "id": "WIAip5fsFipV",
         "colab_type": "code",
+        "outputId": "9653b014-fcc2-4394-da3b-7e11b1f5b2b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "9653b014-fcc2-4394-da3b-7e11b1f5b2b3"
+        }
       },
       "source": [
         "torch.ones(3, 4)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,17 +285,17 @@
       "metadata": {
         "id": "vqxHgltvGT3h",
         "colab_type": "code",
+        "outputId": "59f25c51-7ccb-4ba5-e85f-47c927a62f08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "59f25c51-7ccb-4ba5-e85f-47c927a62f08"
+        }
       },
       "source": [
         "Y = torch.tensor([[2, 1, 4, 3], [1, 2, 3, 4], [4, 3, 2, 1]])\n",
         "Y"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,16 +318,16 @@
       "metadata": {
         "id": "lHI04kprGfuO",
         "colab_type": "code",
+        "outputId": "94f2c045-3e21-4309-d1da-e71e0afd774f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "94f2c045-3e21-4309-d1da-e71e0afd774f"
+        }
       },
       "source": [
         "torch.randn(3, 4)    # 正态分布"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,16 +360,16 @@
       "metadata": {
         "id": "0opksXIzGrtq",
         "colab_type": "code",
+        "outputId": "a9587daa-af1e-47f7-c22a-abb3850add21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "a9587daa-af1e-47f7-c22a-abb3850add21"
+        }
       },
       "source": [
         "X + Y "
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,16 +392,16 @@
       "metadata": {
         "id": "5227Mi3nHEBf",
         "colab_type": "code",
+        "outputId": "0508bf3a-812b-4432-8bfe-15e2ded3186a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "0508bf3a-812b-4432-8bfe-15e2ded3186a"
+        }
       },
       "source": [
         "X * Y "
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,16 +424,16 @@
       "metadata": {
         "id": "icXnxtuMHFih",
         "colab_type": "code",
+        "outputId": "c4574eca-6683-4055-ff8a-3583534d6b4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "c4574eca-6683-4055-ff8a-3583534d6b4e"
+        }
       },
       "source": [
         "X / Y"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,16 +456,16 @@
       "metadata": {
         "id": "mcF0L-Y4HHl8",
         "colab_type": "code",
+        "outputId": "3e1ac7c2-c717-467a-f6d7-5fed892f013d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "3e1ac7c2-c717-467a-f6d7-5fed892f013d"
+        }
       },
       "source": [
         "torch.exp(Y.float())"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,16 +488,16 @@
       "metadata": {
         "id": "YuvWIC7iHbNa",
         "colab_type": "code",
+        "outputId": "996e241e-404b-448e-b7ed-f845ed408505",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "996e241e-404b-448e-b7ed-f845ed408505"
+        }
       },
       "source": [
         "torch.mm(X, Y.T)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,16 +520,16 @@
       "metadata": {
         "id": "RSKYo-0AHfFB",
         "colab_type": "code",
+        "outputId": "9e365453-3819-4472-b47e-cad3036b8a91",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
-        },
-        "outputId": "9e365453-3819-4472-b47e-cad3036b8a91"
+        }
       },
       "source": [
-        "torch.cat((X, Y), 0)    # 0 往下放，地下室，0 楼"
+        "torch.cat((X, Y), 0)    # 0 往下放，地下室，0 楼，纵向"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,16 +555,16 @@
       "metadata": {
         "id": "frmdzTWBHtlZ",
         "colab_type": "code",
+        "outputId": "c2814cc5-226b-414f-a9b5-0ba145c3ba1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "c2814cc5-226b-414f-a9b5-0ba145c3ba1e"
+        }
       },
       "source": [
-        "torch.cat((X, Y), 1)    # 1 平着并排放，1 楼"
+        "torch.cat((X, Y), 1)    # 1 平着并排放，1 楼，横向"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,16 +587,16 @@
       "metadata": {
         "id": "rIQPQ5E9IP2Q",
         "colab_type": "code",
+        "outputId": "fe811d26-81f7-463a-8941-7e73bc9f3871",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "fe811d26-81f7-463a-8941-7e73bc9f3871"
+        }
       },
       "source": [
-        "(X == Y)"
+        "(X == Y)  "
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,16 +619,16 @@
       "metadata": {
         "id": "ySvh8UZ3IVT3",
         "colab_type": "code",
+        "outputId": "7fd58ae6-4bb2-459a-f8c7-f25c8b77b556",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "7fd58ae6-4bb2-459a-f8c7-f25c8b77b556"
+        }
       },
       "source": [
         "(X == Y).int()"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -651,16 +651,16 @@
       "metadata": {
         "id": "Fv6XOJxNIY12",
         "colab_type": "code",
+        "outputId": "e69ef94b-70fc-469e-fbeb-1fb1fc129ad0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e69ef94b-70fc-469e-fbeb-1fb1fc129ad0"
+        }
       },
       "source": [
         "X.sum()"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -681,16 +681,16 @@
       "metadata": {
         "id": "wDDh7oKUIbQu",
         "colab_type": "code",
+        "outputId": "b682fd20-887a-44f5-8f43-4dc6203300d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b682fd20-887a-44f5-8f43-4dc6203300d6"
+        }
       },
       "source": [
         "X.float().norm().item()    # norm() L2 范数，每一项平方，所有项求和，开根号；.item() 只能转换一个数。"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,17 +721,17 @@
       "metadata": {
         "id": "ibFjP_21JEbU",
         "colab_type": "code",
+        "outputId": "6af6057d-bcd8-49db-e8aa-1c4d2c531d68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "6af6057d-bcd8-49db-e8aa-1c4d2c531d68"
+        }
       },
       "source": [
         "A = torch.arange(3).view(3, 1)\n",
         "A"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,17 +754,17 @@
       "metadata": {
         "id": "8LF7cvpFJKm0",
         "colab_type": "code",
+        "outputId": "353a2fe1-bbab-4876-90b2-e775062993ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "353a2fe1-bbab-4876-90b2-e775062993ea"
+        }
       },
       "source": [
         "B = torch.arange(2).view(1, 2)\n",
         "B"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -785,16 +785,16 @@
       "metadata": {
         "id": "u0aj3VUbJQPM",
         "colab_type": "code",
+        "outputId": "cf416d04-3395-4336-c2dd-a1137ea39f67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "cf416d04-3395-4336-c2dd-a1137ea39f67"
+        }
       },
       "source": [
         "A + B"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,16 +827,16 @@
       "metadata": {
         "id": "fhTkdvyZJZqT",
         "colab_type": "code",
+        "outputId": "ac6399b3-fa87-445e-e51c-424b2b403575",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "ac6399b3-fa87-445e-e51c-424b2b403575"
+        }
       },
       "source": [
         "X[1:3]"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,17 +858,17 @@
       "metadata": {
         "id": "2KJ6yRIFJ5Tb",
         "colab_type": "code",
+        "outputId": "20c75c6a-bd9a-440b-df9e-c458eafa48fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "20c75c6a-bd9a-440b-df9e-c458eafa48fb"
+        }
       },
       "source": [
         "X[1, 2] = 9\n",
         "X"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,17 +891,17 @@
       "metadata": {
         "id": "GBizm4tvJ81k",
         "colab_type": "code",
+        "outputId": "1ba34ff1-b966-4a6d-dd60-d98e78c76bd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        },
-        "outputId": "1ba34ff1-b966-4a6d-dd60-d98e78c76bd5"
+        }
       },
       "source": [
         "X[1:2, :] = 12     # 第二层，所有列\n",
         "X"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,18 +934,18 @@
       "metadata": {
         "id": "D3KCmUbbKZrY",
         "colab_type": "code",
+        "outputId": "edef8c84-7f20-4105-ecd1-401b1220e3d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "edef8c84-7f20-4105-ecd1-401b1220e3d4"
+        }
       },
       "source": [
         "before = id(Y)\n",
         "Y = Y + X \n",
         "id(Y) == before "
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -966,11 +966,11 @@
       "metadata": {
         "id": "Kr93OyqPKhWa",
         "colab_type": "code",
+        "outputId": "fcb6fb89-f433-42ed-85c7-b2b8bec8ee4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fcb6fb89-f433-42ed-85c7-b2b8bec8ee4d"
+        }
       },
       "source": [
         "Z = torch.zeros_like(Y)\n",
@@ -978,7 +978,7 @@
         "Z[:] = X + Y\n",
         "id(Z) == before "
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -999,17 +999,17 @@
       "metadata": {
         "id": "vO0hv8_eKsOv",
         "colab_type": "code",
+        "outputId": "e0a02df2-b32f-4b11-cf43-d1b2301ac1fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e0a02df2-b32f-4b11-cf43-d1b2301ac1fa"
+        }
       },
       "source": [
         "torch.add(X, Y, out=Z)\n",
         "id(Z) == before "
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1030,18 +1030,18 @@
       "metadata": {
         "id": "-0N_uI0aK1GT",
         "colab_type": "code",
+        "outputId": "fe90a5a9-2f1a-4061-af86-3cab3a758940",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fe90a5a9-2f1a-4061-af86-3cab3a758940"
+        }
       },
       "source": [
         "before = id(X)\n",
         "X += Y \n",
         "id(X) == before "
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1072,11 +1072,11 @@
       "metadata": {
         "id": "vTsdzM67LGvQ",
         "colab_type": "code",
+        "outputId": "a1917a15-870b-48d5-afb6-73578a4a3023",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "a1917a15-870b-48d5-afb6-73578a4a3023"
+        }
       },
       "source": [
         "import numpy as np \n",
@@ -1085,7 +1085,7 @@
         "T = torch.tensor(P)\n",
         "T"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1107,17 +1107,17 @@
       "metadata": {
         "id": "j6tVSNkDLbEf",
         "colab_type": "code",
+        "outputId": "a03551e5-edb0-4b36-8887-56ce24f5b4c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "a03551e5-edb0-4b36-8887-56ce24f5b4c0"
+        }
       },
       "source": [
         "T1 = torch.from_numpy(P)    # 从后往前念，P from numpy，转化为 torch 的 Tensor\n",
         "T1"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1139,16 +1139,16 @@
       "metadata": {
         "id": "xOY6kOITLxu_",
         "colab_type": "code",
+        "outputId": "d15e7cf4-b1a9-474f-8dee-01e11454d55d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "d15e7cf4-b1a9-474f-8dee-01e11454d55d"
+        }
       },
       "source": [
         "T.numpy()"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
