--- a/pytorch/ch2/2_2.ipynb
+++ b/pytorch/ch2/2_2.ipynb
@@ -48,6 +48,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Khd9m0AnT1eL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# 特别注明：任何可以改变tensor内容的操作都会在方法名后加一个下划线'_'\n",
+        "# 例如：x.copy_(y), x.t_(), 这俩都会改变x的值。会用结果替换原来变量"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "CTmTMtRGD4LZ",
         "colab_type": "code",
         "colab": {}
