--- a/pytorch/ch3/3_5.ipynb
+++ b/pytorch/ch3/3_5.ipynb
@@ -106,16 +106,16 @@
       "metadata": {
         "id": "hIqXLj2hHJKO",
         "colab_type": "code",
+        "outputId": "8084ac8f-b9d2-4af0-9302-50db7176d43f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8084ac8f-b9d2-4af0-9302-50db7176d43f"
+        }
       },
       "source": [
         "type(mnist_train)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,16 +136,16 @@
       "metadata": {
         "id": "4Y_4CNfKHhkJ",
         "colab_type": "code",
+        "outputId": "b11ca8b0-8833-451c-b34f-f1f6c02d633f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b11ca8b0-8833-451c-b34f-f1f6c02d633f"
+        }
       },
       "source": [
         "len(mnist_train), len(mnist_test)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,17 +166,17 @@
       "metadata": {
         "id": "sJXNPx-HHmxM",
         "colab_type": "code",
+        "outputId": "fc23713c-93b8-469c-a681-dd66b012c61a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fc23713c-93b8-469c-a681-dd66b012c61a"
+        }
       },
       "source": [
         "feature, label = mnist_train[1]\n",
         "feature.shape"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,16 +197,16 @@
       "metadata": {
         "id": "mL9SoOp_Lfcx",
         "colab_type": "code",
+        "outputId": "08bc60b3-c609-4151-9ec4-3e9affd85a9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        },
-        "outputId": "08bc60b3-c609-4151-9ec4-3e9affd85a9e"
+        }
       },
       "source": [
         "feature[0][9]    # ToTensor 转化为 0 到 1 之间的小数"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,16 +230,16 @@
       "metadata": {
         "id": "DPDbk-9XHvha",
         "colab_type": "code",
+        "outputId": "1428bd2c-f747-4936-e5f6-32c6b57cfc8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1428bd2c-f747-4936-e5f6-32c6b57cfc8a"
+        }
       },
       "source": [
         "label"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,16 +260,16 @@
       "metadata": {
         "id": "utYGgUjQSmUE",
         "colab_type": "code",
+        "outputId": "d8791fb3-7c9b-4618-b38a-1d82ab625150",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 351
-        },
-        "outputId": "d8791fb3-7c9b-4618-b38a-1d82ab625150"
+        }
       },
       "source": [
         "plt.imshow(feature.view((28, 28)).numpy());"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -307,11 +307,11 @@
       "metadata": {
         "id": "d1Uf6eaRUOkk",
         "colab_type": "code",
+        "outputId": "f86be88d-968a-4c23-87f7-0da60dac8715",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f86be88d-968a-4c23-87f7-0da60dac8715"
+        }
       },
       "source": [
         "# my_labels = [6, 3, 8, 5]\n",
@@ -319,7 +319,7 @@
         "#             'scandal', 'shirt', 'sneaker', 'bag', 'ankle boot'] \n",
         "# [my_text_labels[i] for i in my_labels]  "
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,19 +363,20 @@
       "metadata": {
         "id": "u14ABtqcVVIu",
         "colab_type": "code",
+        "outputId": "5e6977f7-bc8f-4d8b-f9b8-4fca91c0ad98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5e6977f7-bc8f-4d8b-f9b8-4fca91c0ad98"
+        }
       },
       "source": [
-        "# zip 配对\n",
+        "# zip 配对，从 zip 中的内容里各取一项\n",
+        "\n",
         "# L1 = [1, 2, 3, 4]\n",
         "# L2 = [5, 6, 7, 8]\n",
         "# list(zip(L1, L2))"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,17 +397,17 @@
       "metadata": {
         "id": "ArjaWqLqV5PQ",
         "colab_type": "code",
+        "outputId": "cfafa000-be66-4e9c-ec24-2666fdbc748d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        },
-        "outputId": "cfafa000-be66-4e9c-ec24-2666fdbc748d"
+        }
       },
       "source": [
         "# for x, y in zip(L1, L2):\n",
         "#     print(x, y)"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,11 +426,11 @@
       "metadata": {
         "id": "qnYD8mDDJArl",
         "colab_type": "code",
+        "outputId": "e1891816-a144-492c-a7d1-2489261a3a08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 149
-        },
-        "outputId": "e1891816-a144-492c-a7d1-2489261a3a08"
+        }
       },
       "source": [
         "X, y = [], []\n",
@@ -438,7 +439,7 @@
         "    y.append(mnist_train[i][1])    # 第 i 个样本的标签，数字，就是上面的 label\n",
         "show_fashion_mnist(X, get_fashion_mnist_labels(y))  "
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -506,11 +507,11 @@
       "metadata": {
         "id": "3z7y9sE5KUd0",
         "colab_type": "code",
+        "outputId": "76938c7c-d92c-492e-9443-db09e8b73d5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "76938c7c-d92c-492e-9443-db09e8b73d5e"
+        }
       },
       "source": [
         "# 查看读一遍训练数据需要的时间\n",
@@ -519,7 +520,7 @@
         "    continue \n",
         "print('%.2f sec' % (time.time() - start))"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
