--- a/做成事的方法.md
+++ b/做成事的方法.md
@@ -1,26 +1,76 @@
 
+效果：是一种方法，可以用在一生之中的所有事情上。彻底改变了一生，彻底改变了命运。苦苦寻找多年，付出极大努力，全部都以失败告终，一直以为是不可能达到的目标。  
+
+**以后做事做一件成一件，定的所有的目标都可以实现，要做的事情全部都能成功，可以完成所有的任务，可以学会所有的知识，想取得多大成就就能取得多大成就。再也没有任何缺点了。可以发挥出极大的威力。**  
+
+自制力、执行力、意志力全都有了。愿意付出一切来得到这些能力。而现在是以一种极其轻松的方式就能实现，那一定要做。  
+
+
 原理：如果能画一个格子，就能画三个、六个、九个，然后一千个、一万个、一百万个  
 
-宏大的目标让人望而却步，要转化为 5 分钟的小目标，
+**这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**  
 
-浅红色文字：<font color="#dd0000">浅红色文字：</font><br /> 
-深红色文字：<font color="#660000">深红色文字</font><br /> 
-浅绿色文字：<font color="#00dd00">浅绿色文字</font><br /> 
-深绿色文字：<font color="#006600">深绿色文字</font><br /> 
-浅蓝色文字：<font color="#0000dd">浅蓝色文字</font><br /> 
-深蓝色文字：<font color="#000066">深蓝色文字</font><br /> 
-浅黄色文字：<font color="#dddd00">浅黄色文字</font><br /> 
-深黄色文字：<font color="#666600">深黄色文字</font><br /> 
-浅青色文字：<font color="#00dddd">浅青色文字</font><br /> 
-深青色文字：<font color="#006666">深青色文字</font><br /> 
-浅紫色文字：<font color="#dd00dd">浅紫色文字</font><br /> 
-深紫色文字：<font color="#660066">深紫色文字</font><br /> 
+### 演讲内容
+
+宏大的目标让人望而却步，要转化为 5 分钟的小目标，**完成一个格子**。  
+
+**如果目标是读五个章节书，我不会当成五章，也不会当成一章，而是分解成我能完成的任务，每个任务只需要专注 5 分钟。能读多少就读多少。完成以后再做下一个 5 分钟的任务，可以是不同的任务，可以是不同的学科。**  
+
+**same approch, same results.**(可以用在所有的事情上)  
+
+This works really well for me. 把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks.So I thought I'm going to try this in my career, so I did. 事业及其成功。
+
+So why aren't I applying this in my personal life **来实现哪些 big ambitious goals 呢？** 所以学会了德语。  
+
+**但是你们知道 There is actually noting amazing about what I've just done.  
+
+但是效果惊人，学会了赛车、跳伞、开飞机、实现了减肥。  
+
+没有定目标要减 25 磅，而是爬了 33 座山。  
+
+**You have to break these ambitious goals to these more manageable decisions. 不是一开始就定了要爬 33 座山，而是放下手机、站起来、走向门口、开门、关门、开车、下车、走第一步、第二步、第三步...... 都是在正确道路上的一个又一个 tiny decision.**  
+
+读书的目标也实现了，**定的所有目标都实现了。**  
+
+50 万针，30 英里长的毛线。  
+
+**自己没有任何天赋，只是加了这一个方法。**
+
+All I do is take 别人觉得永远做不到的 ambitious projects, break them down to their simplest form an then just make marginal improvements along the way.  
+
+Pull those ambitious dreams that you have for yourself, off the bookshelf, and start pursuing them by making that marginal ajustment to your routine.  
 
 
-size为1：<font size="1">size为1</font><br /> 
-size为2：<font size="2">size为2</font><br /> 
-size为3：<font size="3">size为3</font><br /> 
-size为4：<font size="4">size为4</font><br /> 
-size为10：<font size="10">size为10</font><br /> 
+### 自己感想
+原来一直失败的原因：  
+1、主观疲劳，没有的虚假的东西，但是因为很多，会造成自我损耗。  
+2、靠动力不行，动力递减，越重复越少，最后结果就是半途而废。  
 
-<span style="color:red;">这是比font标签更好的方式。可以试试。</span>
+现在可以成功的原因：  
+1、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复，取得一个又一个胜利。  
+2、因为目标太小，小到了不可能失败。
+3、因为一直成功，所以越来越有成就感，越往后越有劲头。  
+4、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。
+
+
+
+
+### 当前目标
+每天读一遍  
+项目每天 6 个  
+d2l 一章，视频  
+论文 3 篇  
+李航一章  
+nndl  
+C++  
+
+
+
+### 长期目标  
+读名著  
+读论文  
+运动  
+写文章  
+
+
+
