--- a/做成事的方法.md
+++ b/做成事的方法.md
@@ -10,6 +10,7 @@
 
 **这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**  
 
+<br><br>
 ### 演讲内容
 
 宏大的目标让人望而却步，要转化为 5 分钟的小目标，**完成一个格子**。  
@@ -22,7 +23,7 @@ This works really well for me. 把这些 big concept，这些 complex ideas 和 
 
 So why aren't I applying this in my personal life **来实现哪些 big ambitious goals 呢？** 所以学会了德语。  
 
-**但是你们知道 There is actually noting amazing about what I've just done.  
+**但是你们知道 There is actually noting amazing about what I've just done.**  
 
 但是效果惊人，学会了赛车、跳伞、开飞机、实现了减肥。  
 
@@ -40,7 +41,7 @@ All I do is take 别人觉得永远做不到的 ambitious projects, break them d
 
 Pull those ambitious dreams that you have for yourself, off the bookshelf, and start pursuing them by making that marginal ajustment to your routine.  
 
-
+<br><br>
 ### 自己感想
 原来一直失败的原因：  
 1、主观疲劳，没有的虚假的东西，但是因为很多，会造成自我损耗。  
@@ -50,11 +51,11 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 1、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复，取得一个又一个胜利。  
 2、因为目标太小，小到了不可能失败。
 3、因为一直成功，所以越来越有成就感，越往后越有劲头。  
-4、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。
+4、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
+5、可以消除焦虑。  
 
 
-
-
+<br><br>
 ### 当前目标
 每天读一遍  
 项目每天 6 个  
@@ -64,8 +65,7 @@ d2l 一章，视频
 nndl  
 C++  
 
-
-
+<br><br>
 ### 长期目标  
 读名著  
 读论文  
