--- a/做成事的方法.md
+++ b/做成事的方法.md
@@ -10,7 +10,7 @@
 
 **这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**  
 
-<br><br>
+<br>
 ### 演讲内容
 
 宏大的目标让人望而却步，要转化为 5 分钟的小目标，**完成一个格子**。  
@@ -21,7 +21,7 @@
 
 This works really well for me. 把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks.So I thought I'm going to try this in my career, so I did. 事业及其成功。
 
-So why aren't I applying this in my personal life **来实现哪些 big ambitious goals 呢？** 所以学会了德语。  
+So why aren't I applying this in my personal life **来实现那些 big ambitious goals 呢？** 所以学会了德语。  
 
 **但是你们知道 There is actually noting amazing about what I've just done.**  
 
@@ -41,7 +41,7 @@ All I do is take 别人觉得永远做不到的 ambitious projects, break them d
 
 Pull those ambitious dreams that you have for yourself, off the bookshelf, and start pursuing them by making that marginal ajustment to your routine.  
 
-<br><br>
+<br>
 ### 自己感想
 原来一直失败的原因：  
 1、主观疲劳，没有的虚假的东西，但是因为很多，会造成自我损耗。  
@@ -55,7 +55,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 5、可以消除焦虑。  
 
 
-<br><br>
+<br>
 ### 当前目标
 每天读一遍  
 项目每天 6 个  
@@ -65,7 +65,7 @@ d2l 一章，视频
 nndl  
 C++  
 
-<br><br>
+<br>
 ### 长期目标  
 读名著  
 读论文  
