--- a/做成事的方法.md
+++ b/做成事的方法.md
@@ -1,14 +1,16 @@
 
 效果：是一种方法，可以用在一生之中的所有事情上。彻底改变了一生，彻底改变了命运。苦苦寻找多年，付出极大努力，全部都以失败告终，一直以为是不可能达到的目标。  
 
-**以后做事做一件成一件，定的所有的目标都可以实现，要做的事情全部都能成功，可以完成所有的任务，可以学会所有的知识，想取得多大成就就能取得多大成就。再也没有任何缺点了。可以发挥出极大的威力。**  
+**以后做事可以做一件成一件，可以完成所有的任务，实现所有的目标，学会所有的知识，全部都能成功，想取得多大成就就能取得多大成就。再也没有任何缺点。有极大的威力。**  
 
-自制力、执行力、意志力全都有了。愿意付出一切来得到这些能力。而现在是以一种极其轻松的方式就能实现，那一定要做。  
+自制力、执行力、意志力全都有了，是以一种极其轻松的方式实现的。  
 
 
 原理：如果能画一个格子，就能画三个、六个、九个，然后一千个、一万个、一百万个  
 
 **这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**  
+
+**不是当做启动方法，就是当做做事方法，不要怕打断。原来只能每天一两个小时，分解还是最快的。而且心态完全不一样，轻松百倍。**  
 
 <br>
 
@@ -20,21 +22,19 @@
 
 **same approch, same results.**(可以用在所有的事情上)  
 
-This works really well for me. 把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks.So I thought I'm going to try this in my career, so I did. 事业及其成功。
+This works really well for me. 把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks. I thought I'm going to try this in my career, so I did. 事业及其成功。
 
-So why aren't I applying this in my personal life **来实现那些 big ambitious goals 呢？** 所以学会了德语。  
+So why aren't I applying this in my personal life **来实现那些 big ambitious goals 呢？** 学会了德语。  
 
-**但是你们知道 There is actually noting amazing about what I've just done.**  
+效果惊人，学会了德语、赛车、跳伞、开飞机、实现了减肥、完成了读书目标、50 万针 30 英里毛线(而且自己并不喜欢)、。
 
-但是效果惊人，学会了赛车、跳伞、开飞机、实现了减肥。  
+**但是你们知道 There is actually noting amazing about what I've just done.**    
 
 没有定目标要减 25 磅，而是爬了 33 座山。  
 
 **You have to break these ambitious goals to these more manageable decisions. 不是一开始就定了要爬 33 座山，而是放下手机、站起来、走向门口、开门、关门、开车、下车、走第一步、第二步、第三步...... 都是在正确道路上的一个又一个 tiny decision.**  
 
-读书的目标也实现了，**定的所有目标都实现了。**  
-
-50 万针，30 英里长的毛线。  
+**定的所有目标都实现了。**  
 
 **自己没有任何天赋，只是加了这一个方法。**
 
