--- a/拥有极强执行力的方法.md
+++ b/拥有极强执行力的方法.md
@@ -56,6 +56,11 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 4、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
 5、可以消除焦虑。  
 
+<br>
+
+**对于缺点，要把过程分解成几百个小的部分，成为一个很长很长的链条，只要其中任何一点不去做，就能成功。用这一个方法，可以克服所有的缺点。**
+
+
 
 <br>
 
