--- a/拥有极强执行力的方法.md
+++ b/拥有极强执行力的方法.md
@@ -51,6 +51,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 现在可以成功的原因：  
 1、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复，取得一个又一个胜利。  
+1.1、分解大目标，有瓦解敌人，各个击破的思想。  
 2、因为目标太小，小到了不可能失败。
 3、因为一直成功，所以越来越有成就感，越往后越有劲头。  
 4、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
@@ -58,7 +59,9 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 <br>
 
-**对于缺点，要把过程分解成几百个小的部分，成为一个很长很长的链条，只要其中任何一点不去做，就能成功。用这一个方法，可以克服所有的缺点。**
+**对于缺点，要把过程分解成几百个小的部分，成为一个很长很长的链条，只要其中任何一点不去做，就能成功。用这一个方法，可以克服所有的缺点。**  
+
+**对于必须要做，又不想去做的事情，要把过程分解成几百个小的部分，一个一个克服。**  
 
 
 
@@ -72,6 +75,7 @@ d2l 一章，视频
 李航一章  
 nndl  
 C++  
+收拾房间  
 
 <br>
 
