--- a/拥有极强执行力的方法.md
+++ b/拥有极强执行力的方法.md
@@ -1,9 +1,9 @@
 
-效果：是一种方法，可以用在一生之中的所有事情上。彻底改变了一生，彻底改变了命运。苦苦寻找多年，付出极大努力，全部都以失败告终，一直以为是不可能达到的目标。  
+是一种方法，可以用在一生之中的所有事情上。彻底改变了一生，彻底改变了命运。苦苦寻找多年付出极大努力，全部都以失败告终，一直是不可达到的目标。  
 
-**以后做事可以做一件成一件，可以完成所有的任务，实现所有的目标，学会所有的知识，全部都能成功，想取得多大成就就能取得多大成就。再也没有任何缺点。有极大的威力。**  
+**以后做事可以做一件成一件，可以完成所有的任务，实现所有的目标，学会所有的知识，全部都能成功，想取得多大成就就能取得多大成就。再也没有任何缺点。可以产生极大的威力。**  
 
-自制力、执行力、意志力全都有了，是以一种极其轻松的方式实现的。  
+自制力、执行力、意志力全都有了，而且是以一种极其轻松的方式实现的。  
 
 
 原理：如果能画一个格子，就能画三个、六个、九个，然后一千个、一万个、一百万个  
@@ -16,17 +16,17 @@
 
 ### 演讲内容
 
-宏大的目标让人望而却步，要转化为 5 分钟的小目标，**完成一个格子**。  
+任务太多让人望而却步，要转化为 5 分钟的小目标，**完成一个格子**。  
 
 **如果目标是读五个章节书，我不会当成五章，也不会当成一章，而是分解成我能完成的任务，每个任务只需要专注 5 分钟。能读多少就读多少。完成以后再做下一个 5 分钟的任务，可以是不同的任务，可以是不同的学科。**  
 
-**same approch, same results.**(可以用在所有的事情上)  
+**same approch, same results.** (可以用在所有的事情上)  
 
 This works really well for me. 把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks. I thought I'm going to try this in my career, so I did. 事业及其成功。
 
-So why aren't I applying this in my personal life **来实现那些 big ambitious goals 呢？** 学会了德语。  
+So why aren't I applying this in my personal life **来实现那些 big ambitious goals 呢？**  
 
-效果惊人，学会了德语、赛车、跳伞、开飞机、实现了减肥、完成了读书目标、50 万针 30 英里毛线(而且自己并不喜欢)、。
+效果惊人，此后做事做一件成一件，学会了德语、赛车、跳伞、开飞机、实现了减肥、**完成了读书目标**、50 万针 30 英里毛线(而且自己并不喜欢)、。
 
 **但是你们知道 There is actually noting amazing about what I've just done.**    
 
@@ -36,9 +36,9 @@ So why aren't I applying this in my personal life **来实现那些 big ambitiou
 
 **定的所有目标都实现了。**  
 
-**自己没有任何天赋，只是加了这一个方法。**
+**自己没有任何天赋，只是增加了这一个方法。**
 
-All I do is take 别人觉得永远做不到的 ambitious projects, break them down to their simplest form an then just make marginal improvements along the way.  
+All I do is take 别人觉得永远做不到的 ambitious projects, break them down to their simplest form and then just make marginal improvements along the way.  
 
 Pull those ambitious dreams that you have for yourself, off the bookshelf, and start pursuing them by making that marginal ajustment to your routine.  
 
@@ -47,15 +47,15 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 ### 自己感想
 原来一直失败的原因：  
 1、主观疲劳，没有的虚假的东西，但是因为很多，会造成自我损耗。  
-2、靠动力不行，动力递减，越重复越少，最后结果就是半途而废。  
+2、靠动力不行，动力随着重复次数的增多变得越来越少，最后结果就是半途而废。  
 
 现在可以成功的原因：  
-1、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复，取得一个又一个胜利。  
-1.1、分解大目标，有瓦解敌人，各个击破的思想。  
-2、因为目标太小，小到了不可能失败。
-3、因为一直成功，所以越来越有成就感，越往后越有劲头。  
-4、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
-5、可以消除焦虑。  
+1、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复这个简单的过程，来取得一个又一个胜利。  
+2、分解大目标，有瓦解敌人，各个击破的思想。  
+3、因为目标太小，小到了不可能失败。
+4、因为一直成功，所以越来越有成就感，越往后越有劲头。  
+5、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
+6、可以消除焦虑。  
 
 <br>
 
