--- a/拥有极强执行力的方法.md
+++ b/拥有极强执行力的方法.md
@@ -59,10 +59,11 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 <br>
 
-**对于缺点，要把过程分解成几百个小的部分，成为一个很长很长的链条，只要其中任何一点不去做，就能成功。用这一个方法，可以克服所有的缺点。**  
-
 **对于必须要做，又不想去做的事情，要把过程分解成几百个小的部分，一个一个克服。**  
 
+**对于缺点，要把过程分解成几百个小的部分，成为一个很长很长的链条，只要其中任何一点不去做，就能成功。用这一个方法，可以克服所有的缺点。**  
+
+**过程中要能够及时止损，办法就是先活动手指，再往正确的方向挪动手指一毫米，再挪一毫米。**  
 
 
 <br>
@@ -75,6 +76,7 @@ d2l 一章，视频
 李航一章  
 nndl  
 C++  
+背背佳  
 收拾房间  
 
 <br>
