--- a/拥有极强执行力的方法.md
+++ b/拥有极强执行力的方法.md
@@ -16,7 +16,7 @@
 
 ### 演讲内容
 
-任务太多让人望而却步，要转化为 5 分钟的小目标，**完成一个格子**。  
+任务太多让人望而却步，要转化为 5 分钟的小目标，**完成一个格子。**  
 
 **如果目标是读五个章节书，我不会当成五章，也不会当成一章，而是分解成我能完成的任务，每个任务只需要专注 5 分钟。能读多少就读多少。完成以后再做下一个 5 分钟的任务，可以是不同的任务，可以是不同的学科。**  
 
@@ -69,15 +69,17 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 <br>
 
 ### 当前目标
-每天读一遍  
+每天读一遍，每天第一件事  
 项目每天 6 个  
-d2l 一章，视频  
 论文 3 篇  
 李航一章  
 nndl  
 C++  
 背背佳  
 收拾房间  
+
+
+d2l 一章，视频  
 
 <br>
 
@@ -86,6 +88,4 @@ C++
 读论文  
 运动  
 写文章  
-
-
 
