--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -1,6 +1,8 @@
 
 一定要再试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，再增加到作者的一年十几个。  
 
+再也不用受这些苦了，一定可以找到一个非常好的，非常值得去去做，极其划算。  
+
 是一种方法，可以用在一生之中的所有事情上。彻底改变了一生，彻底改变了命运。苦苦寻找多年付出极大努力，全部都以失败告终，一直是不可达到的目标。  
 
 **以后做事可以做一件成一件，可以完成所有的任务，实现所有的目标，学会所有的知识，全部都能成功，想取得多大成就就能取得多大成就。再也没有任何缺点。可以产生极大的威力。**  
