--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -1,3 +1,12 @@
+是有效的，只要自己想起来就能做成，所以肯定是有效的。  
+
+四种情况下，条件反射想起来。  
+1、压力大  
+2、学不动  
+3、做的事情的启动项  8.15运动
+4、不该做的事情，终止  
+
+
 
 一定要再试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，再增加到作者的一年十几个。  
 
