--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -1,9 +1,12 @@
 是有效的，只要自己想起来就能做成，所以肯定是有效的。  
 
+每天看一遍视频，坚持一年，背下来，完成读书和减肥目标。  
+08.15、  
+
 四种情况下，条件反射想起来。  
 1、压力大  
 2、学不动  
-3、做的事情的启动项  8.15运动
+3、做的事情的启动项  8.15运动  
 4、不该做的事情，终止  
 
 
