--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -61,13 +61,13 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 ### 自己感想
 原来一直失败的原因：  
-1、主观疲劳，没有的虚假的东西，但是因为很多，会造成自我损耗。  
+1、主观疲劳，是没有的虚假的东西，但是因为很多，会造成自我损耗。比如定目标 50 本书，还没读就觉得很累压力大，这就是虚假的东西，其实你什么都还没做。查理芒格，如果觉得很难就不做了。  
 2、靠动力不行，动力随着重复次数的增多变得越来越少，最后结果就是半途而废。  
 
 现在可以成功的原因：  
 1、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复这个简单的过程，来取得一个又一个胜利。  
 2、分解大目标，有瓦解敌人，各个击破的思想。  
-3、因为目标太小，小到了不可能失败。
+3、因为目标太小，小到了不可能失败。  
 4、因为一直成功，所以越来越有成就感，越往后越有劲头。  
 5、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
 6、可以消除焦虑。  
