--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -4,10 +4,14 @@
 08.15、    
 
 四种情况下，条件反射想起来。  
-1、压力大  
-2、学不动  
-3、做的事情的启动项  8.15运动  
-4、不该做的事情，终止  
+**1、压力大**  
+
+**2、学不动**  
+
+**3、做的事情的启动项**  
+8.15跑步、  
+
+**4、不该做的事情，终止**  
 
 
 一定要再试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，再增加到作者的一年十几个。  
@@ -42,6 +46,8 @@ This works really well for me. 把这些 big concept，这些 complex ideas 和 
 So why aren't I applying this in my personal life **来实现那些 big ambitious goals 呢？**  
 
 效果惊人，此后做事做一件成一件，学会了德语、赛车、跳伞、开飞机、实现了减肥、**完成了读书目标**、50 万针 30 英里毛线(而且自己并不喜欢)、。
+
+**读书就是读一个字**  
 
 **但是你们知道 There is actually noting amazing about what I've just done.**    
 
