--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -88,6 +88,10 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 
 <br>
+清单中的每一条都难如登天的永远都不到的内容，一多半几十条，都可以用这一个方法做到。  
+
+
+<br>
 
 ### 当前目标
 每天读一遍，每天第一件事  
