--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -1,7 +1,9 @@
 是有效的，只要自己想起来就能做成，所以肯定是有效的。  
 
 每天看一遍视频，坚持一年，背下来，完成读书和减肥目标。  
-08.15、    
+08.15 √  
+08.16 √  
+   
 
 四种情况下，条件反射想起来。  
 **1、压力大**  
@@ -113,4 +115,13 @@ d2l 一章，视频
 读论文  
 运动  
 写文章  
+
+
+
+
+读书：
+1、《知青岁月》  
+
+
+
 
