--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -92,6 +92,8 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 <br>
 清单中的每一条都难如登天的永远都不到的内容，一多半几十条，都可以用这一个方法做到。  
 
+比提高 pain treshold 容易一万倍。  
+
 
 <br>
 
@@ -119,7 +121,7 @@ d2l 一章，视频
 
 
 
-读书：
+### 读书：
 1、《知青岁月》  
 
 
