--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -1,5 +1,7 @@
 是有效的，只要自己想起来就能做成，所以肯定是有效的。  
 
+试了那么多都不行，这个可以，就发挥到极致，超过作者。先做这个一年再说。  
+
 每天看一遍视频，坚持一年，背下来，完成读书和减肥目标。  
 08.15 √  
 08.16 √  
@@ -11,7 +13,7 @@
 **2、学不动**  
 
 **3、做的事情的启动项**  
-8.15跑步、  
+08.15跑步、  
 
 **4、不该做的事情，终止**  
 
@@ -119,7 +121,9 @@ d2l 一章，视频
 写文章  
 
 
-
+<br>
+<br>
+今年 50 本，以后每年 50 本  
 
 ### 读书：
 1、《知青岁月》  
