--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -18,7 +18,7 @@
 **4、不该做的事情，终止**  
 
 
-一定要再试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，再增加到作者的一年十几个。  
+一定要再试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，增加信心，再增加到作者的一年十几个。  
 
 再也不用受这些苦了，一定可以找到一个非常好的，非常值得去去做，极其划算。  
 
