--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -126,7 +126,7 @@ d2l 一章，视频
 
 
 ### 读书：
-今年 50 本，以后每年 50 本。零散时间写文章。  
+今年 50 本，以后每年 50 本；零散时间写文章；写 50 篇实践证明后再说；  
 1 页分解成 4 个任务  
 <br>
 1、《知青岁月》  
