--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -127,7 +127,10 @@ d2l 一章，视频
 
 ### 读书：
 今年 50 本，以后每年 50 本；零散时间写文章；写 50 篇实践证明后再说；  
-1 页分解成 4 个任务  
+<br>
+定目标读 1 个字，可以读 30 页；如果定目标是读 30 页，很可能一个月 1 个字都读不了。  
+<br>
+1 页分解成 8 个任务  
 <br>
 1、《知青岁月》  
 
