--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -2,9 +2,10 @@
 
 试了那么多都不行，这个可以，就发挥到极致，超过作者。先做这个一年再说。  
 
-每天看一遍视频，坚持一年，背下来，完成读书和减肥目标。  
+每天看一遍视频，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
 08.15 √  
 08.16 √  
+08.17 √  
    
 
 四种情况下，条件反射想起来，转到读书和减肥。  
