--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -2,24 +2,19 @@
 
 试了那么多都不行，这个可以，就发挥到极致，超过作者。先做这个一年再说。  
 
-每天看一遍视频，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
-08.15 √  
-08.16 √  
-08.17 √  
-   
-
 四种情况下，条件反射想起来，转到读书和减肥。  
 **1、压力大**  
 
 **2、学不动**  
 
 **3、做的事情的启动项**  
-08.15跑步、  
 
 **4、不该做的事情，终止**  
+看视频终止，不超过 10 分钟，转到读书任务。  
 
 
-一定要再试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，增加信心，再增加到作者的一年十几个。  
+
+一定试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，增加信心，再增加到作者的一年十几个。  
 
 再也不用受这些苦了，一定可以找到一个非常好的，非常值得去去做，极其划算。  
 
@@ -127,13 +122,25 @@ d2l 一章，视频
 
 
 ### 读书：
-今年 50 本，以后每年 50 本；零散时间写文章；写 50 篇实践证明后再说；  
+今年 50 本，以后每年 50 本；零散时间写文章；用公众号证明再说，没理由会做不成；知乎写 50 篇实践证明后再说；  
 <br>
 定目标读 1 个字，可以读 30 页；如果定目标是读 30 页，很可能一个月 1 个字都读不了。  
 <br>
 1 页分解成 8 个任务  
 <br>
 1、《知青岁月》  
+
+
+
+### 运动
+08.15跑步、08.17跑步、  
+
+
+
+每天看一遍视频，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
+08.15 √  
+08.16 √  
+08.17 √  
 
 
 
