--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -136,8 +136,12 @@ d2l 一章，视频
 08.15跑步、08.17跑步、  
 
 
+<br>
+<br>
 
 每天看一遍视频，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
+<br>
+两个月后说因为每天听，所以背下来了  
 08.15 √  
 08.16 √  
 08.17 √  
