--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -10,7 +10,7 @@
 **3、做的事情的启动项**  
 
 **4、不该做的事情，终止**  
-看视频终止，不超过 10 分钟，转到读书任务。  
+看视频终止，不超过 10 分钟，自动转到 C++。  
 
 
 
@@ -134,6 +134,11 @@ d2l 一章，视频
 
 ### 运动
 08.15跑步、08.17跑步、  
+
+
+### C++ 
+想看视频，自动转到 C++  
+
 
 
 <br>
