--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -1,3 +1,4 @@
+
 是有效的，只要自己想起来就能做成，所以肯定是有效的。  
 
 试了那么多都不行，这个可以，就发挥到极致，超过作者。先做这个一年再说。  
@@ -130,15 +131,24 @@ d2l 一章，视频
 <br>
 1、《知青岁月》  
 
-
+<br>
 
 ### 运动
 08.15跑步、08.17跑步、  
 
+<br>
 
 ### C++ 
 想看视频，自动转到 C++  
 
+<br>
+
+### 《深度学习笔记》
+
+
+<br>
+
+## 已完成
 
 
 <br>
@@ -150,7 +160,7 @@ d2l 一章，视频
 08.15 √  
 08.16 √  
 08.17 √  
-
+08.18 √  
 
 
 
