--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -11,7 +11,7 @@
 **3、做的事情的启动项**  
 
 **4、不该做的事情，终止**  
-看视频终止，不超过 10 分钟，自动转到 C++。  
+看视频终止，不超过 10 分钟，自动转到 Ian、 C++。  
 
 
 
@@ -161,6 +161,6 @@ d2l 一章，视频
 08.16 √  
 08.17 √  
 08.18 √  
-
+08.19 √  
 
 
