--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -133,12 +133,16 @@ d2l 一章，视频
 <br>
 1 页分解成 8 个任务  
 <br>
-1、《知青岁月》  
+1、《知青岁月》  08.15-08.20 √  
+2、《在正定》  
 
 <br>
 
 ### 运动
-08.15跑步、08.17跑步、08.18跑步 8358步、  
+08.15跑步、  
+08.17跑步、  
+08.18跑步 8358步、  
+08.19跑步 7287步、  
 
 <br>
 
