--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -46,7 +46,7 @@
 
 **same approch, same results.** (可以用在所有的事情上)  
 
-This works really well for me. 把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks. I thought I'm going to try this in my career, so I did. 事业及其成功。
+This works really well for me. 把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks. I thought I'm going to try this in my career, so I did. 事业极其成功。
 
 So why aren't I applying this in my personal life **来实现那些 big ambitious goals 呢？**  
 
