--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -7,7 +7,7 @@
 
 试了那么多都不行，这个可以，就发挥到极致，超过作者。先做这个一年再说。  
 
-四种情况下，条件反射想起来，转到读书和减肥。  
+四种情况下，条件反射想起来，转到读书和运动。  
 **1、压力大**  
 
 **2、学不动**  
@@ -143,6 +143,7 @@ d2l 一章，视频
 08.17跑步、  
 08.18跑步 8358步、  
 08.19跑步 7287步、  
+08.21跑步  
 
 <br>
 
@@ -156,7 +157,19 @@ d2l 一章，视频
 
 <br>
 
+### 吃饭：读论文(优先读论文，可以读一页)、李飞飞、唐宇迪、
+08.21：李飞飞、读论文、  
+
+<br>
+
+### 学不动，想看电视：Ian 笔记、《在正定》、d2l pysnooper、洗衣服、打扫卫生、运动、睡觉 
+08.21：Ian 笔记、《在正定》、
+<br>
+
+
 ## 已完成
+
+
 
 
 <br>
