--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -76,6 +76,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 2、靠动力不行，动力随着重复次数的增多变得越来越少，最后结果就是半途而废。  
 
 现在可以成功的原因：  
+最重要的原因应该还是大脑不愿意改变。比如习惯，一旦养成就很难改变，比如电视剧有几个版本，一直喜欢最开始看到的那一个版本，无法接受新的，不想改变。很多人冥顽不灵，死抱着错误的观念，直到进了坟墓也不放手。比如演员，出不来。比如自我暗示，觉得自己能创业。一旦开始，就不想改，比如看电视。可以用到好的事情上，比如读书，一旦开始就停不下来。  
 1、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复这个简单的过程，来取得一个又一个胜利。  
 2、分解大目标，有瓦解敌人，各个击破的思想。  
 3、因为目标太小，小到了不可能失败。  
