--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -85,6 +85,8 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 6、可以消除焦虑。  
 
 <br>
+不是天分，不是动力，不是品质，不是自制力、执行力和意志力，而是**方法**  
+<br>
 
 **对于必须要做，又不想去做的事情，要把过程分解成几百个小的部分，一个一个克服。**  
 
@@ -186,5 +188,5 @@ d2l 一章，视频
 08.19 √  
 08.20 √  
 08.21 √  
-
+08.22 √  
 
