--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -15,7 +15,7 @@
 **3、做的事情的启动项**  
 
 **4、不该做的事情，终止**  
-看视频终止，不超过 10 分钟，自动转到 Ian、 C++。  
+看视频自动转到 Ian、 C++。  
 
 
 
@@ -162,13 +162,15 @@ d2l 一章，视频
 
 <br>
 
-### 吃饭：读论文(优先读论文，可以读一页)、李飞飞、唐宇迪、
+### 吃饭：读论文(先读论文，可以读一页，一天可以读三页)、李飞飞、唐宇迪、
 08.21：李飞飞、读论文、  
+08.21：读论文、  
 
 <br>
 
 ### 学不动，想看电视：Ian 笔记、《在正定》、d2l pysnooper、洗衣服、打扫卫生、运动、睡觉 
 08.21：Ian 笔记、《在正定》、
+
 <br>
 
 
