--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -143,7 +143,7 @@ d2l 一章，视频
 
 <br>
 
-### 运动
+### 运动，靠运动睡觉，永远不靠视频
 08.15跑步、  
 08.17跑步、  
 08.18跑步 8358步、  
@@ -182,19 +182,9 @@ d2l 一章，视频
 <br>
 <br>
 
-每天看一遍视频，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
+洗衣服刷牙听一遍，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
 <br>
-两个月后说因为每天听，所以背下来了  
-08.15 √  
-08.16 √  
-08.17 √  
-08.18 √  
-08.19 √  
-08.20 √  
-08.21 √  
-08.22 √  
-08.23 √  
-08.24 √  
+
 
 
 
