--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -18,7 +18,6 @@
 看视频自动转到 Ian、 C++。  
 
 
-
 一定试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，增加信心，再增加到作者的一年十几个。  
 
 再也不用受这些苦了，一定可以找到一个非常好的，非常值得去去做，极其划算。  
@@ -76,13 +75,13 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 2、靠动力不行，动力随着重复次数的增多变得越来越少，最后结果就是半途而废。  
 
 现在可以成功的原因：  
-最重要的原因应该还是大脑不愿意改变。比如习惯，一旦养成就很难改变，比如电视剧有几个版本，一直喜欢最开始看到的那一个版本，无法接受新的，不想改变。很多人冥顽不灵，死抱着错误的观念，直到进了坟墓也不放手。比如演员，出不来。比如自我暗示，觉得自己能创业。一旦开始，就不想改，比如看电视。可以用到好的事情上，比如读书，一旦开始就停不下来。  
-1、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复这个简单的过程，来取得一个又一个胜利。  
-2、分解大目标，有瓦解敌人，各个击破的思想。  
-3、因为目标太小，小到了不可能失败。  
-4、因为一直成功，所以越来越有成就感，越往后越有劲头。  
-5、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
-6、可以消除焦虑。  
+1、最重要的原因应该还是大脑不愿意改变。一旦开始，就不想改，比如看电视，玩手机，可以用到好的事情上，比如读书，一旦开始就停不下来。  
+2、毛主席集中优势兵力，各个歼灭敌人。对于 5 分钟任务，绝对是绝对的优势兵力。因而可以完全取胜。然后要做的就是不断重复这个简单的过程，来取得一个又一个胜利。  
+3、分解大目标，有瓦解敌人，各个击破的思想。  
+4、因为目标太小，小到了不可能失败。  
+5、因为一直成功，所以越来越有成就感，越往后越有劲头。  
+6、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
+7、可以消除焦虑。  
 
 <br>
 
@@ -138,17 +137,15 @@ d2l 一章，视频
 <br>
 1 页分解成 8 个任务  
 <br>
-1、《知青岁月》  08.15-08.20 √  
+1、《知青岁月》  
 2、《在正定》  
+3、《在厦门》  
+4、《在宁德》  
+5、《在福州》  08.15-08.28 √  
 
 <br>
 
 ### 运动，靠运动睡觉，永远不靠视频
-08.15跑步、  
-08.17跑步、  
-08.18跑步 8358步、  
-08.19跑步 7287步、  
-08.21跑步  
 
 <br>
 
@@ -168,7 +165,7 @@ d2l 一章，视频
 
 <br>
 
-### 学不动，想看电视：Ian 笔记、《在正定》、d2l pysnooper、洗衣服、打扫卫生、运动、睡觉 
+### 学不动，想看电视：Ian 笔记、《褚时健传》、d2l pysnooper、洗衣服、打扫卫生、运动、睡觉 
 08.21：Ian 笔记、《在正定》、
 
 <br>
