--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -14,11 +14,11 @@
 
 **3、做的事情的启动项**  
 
-**4、不该做的事情，终止**  
+**4、不该做的事情，玩手机看视频，终止**  
 看视频自动转到 Ian、 C++。  
 
 
-一定试一试，效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，增加信心，再增加到作者的一年十几个。  
+效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，增加信心，再增加到作者的一年十几个。  
 
 再也不用受这些苦了，一定可以找到一个非常好的，非常值得去去做，极其划算。  
 
@@ -33,13 +33,13 @@
 
 **这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**  
 
-**不是当做启动方法，就是当做做事方法，不要怕打断。原来只能每天一两个小时，分解还是最快的。而且心态完全不一样，轻松百倍。**  
+**原来只能每天一两个小时，分解还是最快的。而且心态完全不一样，轻松百倍。**  
 
 <br>
 
 ### 演讲内容
 
-任务太多让人望而却步，要转化为 5 分钟的小目标，**完成一个格子。**  
+任务太多让人望而却步，要转化为 5 分钟的小目标，**能完成一个格子，就没有理由不能完成一幅画。**  
 
 **如果目标是读五个章节书，我不会当成五章，也不会当成一章，而是分解成我能完成的任务，每个任务只需要专注 5 分钟。能读多少就读多少。完成以后再做下一个 5 分钟的任务，可以是不同的任务，可以是不同的学科。**  
 
@@ -49,7 +49,7 @@ This works really well for me. 把这些 big concept，这些 complex ideas 和 
 
 So why aren't I applying this in my personal life **来实现那些 big ambitious goals 呢？**  
 
-效果惊人，此后做事做一件成一件，学会了德语、赛车、跳伞、开飞机、实现了减肥、**完成了读书目标**、50 万针 30 英里毛线(而且自己并不喜欢)、。
+此后做事做一件成一件，学会了德语、赛车、跳伞、开飞机、实现了减肥、**完成了读书目标**、50 万针 30 英里毛线(而且自己并不喜欢)、。
 
 **读书就是读一个字**  
 
@@ -88,12 +88,6 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 不是天分，不是动力，不是品质，不是自制力、执行力和意志力，而是**方法**  
 
 <br>
-
-**对于必须要做，又不想去做的事情，要把过程分解成几百个小的部分，一个一个克服。**  
-
-**对于缺点，要把过程分解成几百个小的部分，成为一个很长很长的链条，只要其中任何一点不去做，就能成功。用这一个方法，可以克服所有的缺点。**  
-
-**过程中要能够及时止损，办法就是先活动手指，再往正确的方向挪动手指一毫米，再挪一毫米。**  
 
 
 <br>
@@ -141,7 +135,8 @@ d2l 一章，视频
 2、《在正定》  
 3、《在厦门》  
 4、《在宁德》  
-5、《在福州》  08.15-08.28 √  
+5、《在福州》  
+
 
 <br>
 
@@ -174,12 +169,10 @@ d2l 一章，视频
 ## 已完成
 
 
-
-
 <br>
 <br>
 
-洗衣服刷牙听一遍，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
+洗衣服刷牙做饭听一遍，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
 <br>
 
 
