--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -5,7 +5,7 @@
 
 是有效的，只要自己想起来就能做成，所以肯定是有效的。  
 
-试了那么多都不行，这个可以，就发挥到极致，超过作者。先做这个一年再说。  
+试了那么多都不行，这个可以，就发挥到极致，超过作者。不管它行不行，先做个一年再说。  
 
 四种情况下，条件反射想起来，转到读书和运动。  
 **1、压力大**  
@@ -72,6 +72,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 ### 自己感想
 原来一直失败的原因：  
 1、主观疲劳，是没有的虚假的东西，但是因为很多，会造成自我损耗。比如定目标 50 本书，还没读就觉得很累压力大，这就是虚假的东西，其实你什么都还没做。查理芒格，如果觉得很难就不做了。  
+半途而废的最重要的原因应该就是主观疲劳了，这个方法对于消除主观疲劳极为有效。
 2、靠动力不行，动力随着重复次数的增多变得越来越少，最后结果就是半途而废。  
 
 现在可以成功的原因：  
@@ -177,5 +178,7 @@ d2l 一章，视频
 
 
 
+
+群里再说，就是 C++ 了，1、说毛主席链接；2、靠动力不行，越来越少，这种方法越来越有力量  
 
 
