--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -69,6 +69,18 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 <br>
 
+### 演讲理解
+
+是方法，可以决定几百万件事  
+
+因为事情非常多，所以一点 marginal ajustment，会产生极为巨大的影响  
+
+打网球，提高了一点点，奖励变成了原来的 56 倍  
+
+
+
+<br>
+
 ### 自己感想
 原来一直失败的原因：  
 1、主观疲劳，是没有的虚假的东西，但是因为很多，会造成自我损耗。比如定目标 50 本书，还没读就觉得很累压力大，这就是虚假的东西，其实你什么都还没做。查理芒格，如果觉得很难就不做了。  
@@ -125,6 +137,11 @@ d2l 一章，视频
 <br>
 
 
+## marginal ajustment
+put 手机 down，每次省几个小时，可以产生 huge impact  
+
+
+
 ### 读书：
 今年 50 本，以后每年 50 本；零散时间写文章；用公众号证明再说，没理由会做不成；知乎写 50 篇实践证明后再说；  
 <br>
@@ -142,6 +159,7 @@ d2l 一章，视频
 <br>
 
 ### 运动，靠运动睡觉，永远不靠视频
+第一圈走，第二圈跑几步  
 
 <br>
 
@@ -151,7 +169,6 @@ d2l 一章，视频
 <br>
 
 ### 《深度学习笔记》
-
 
 <br>
 
