--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -71,13 +71,25 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 ### 演讲理解
 
+能完成一个，没有道理不能完成所有  
+
+不是天分，不是动力，不是品质，不是自制力、执行力和意志力，而是**方法**  
+
 是方法，可以决定几百万件事  
 
 因为事情非常多，所以一点 marginal ajustment，会产生极为巨大的影响  
 
 打网球，提高了一点点，奖励变成了原来的 56 倍  
 
+把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks.  
 
+重要的是这些 tiny little decisions  
+
+看视频，看手机，条件反射，自动跳转  
+
+读书读一个字  
+
+这个方法最擅长的就是做需要持之以恒坚持的宏大的事情，50 万针，48 公里。非常契合，如鱼得水。
 
 <br>
 
@@ -96,23 +108,17 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 6、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
 7、可以消除焦虑。  
 
-<br>
-
-不是天分，不是动力，不是品质，不是自制力、执行力和意志力，而是**方法**  
 
 <br>
 
 
 <br>
-清单中的每一条都难如登天的永远都不到的内容，一多半几十条，都可以用这一个方法做到。  
-
-比提高 pain treshold 容易一万倍。  
+清单中的每一条都难如登天的永远都不到的内容，一多半几十条，都可以用这一个方法做到。比提高 pain treshold 容易一万倍。  
 
 
 <br>
 
 ### 当前目标
-每天读一遍，每天第一件事  
 项目每天 6 个  
 论文 3 篇  
 李航一章  
@@ -135,11 +141,6 @@ d2l 一章，视频
 
 <br>
 <br>
-
-
-## marginal ajustment
-put 手机 down，每次省几个小时，可以产生 huge impact  
-
 
 
 ### 读书：
@@ -184,6 +185,30 @@ put 手机 down，每次省几个小时，可以产生 huge impact
 <br>
 
 
+
+## marginal ajustment to my daily routine
+1、put 手机 down，每次省几个小时，可以产生 huge impact  
+2、刷牙的时候听演讲  
+3、散步的时候听书，一年多读 50 本书。做饭洗衣服的时候听书  
+4、吃饭的时候读论文  
+
+
+
+
+### 要听的书：已经读完的；没读过的不难的非名著；一直读不下去的；
+四大名著
+《莎士比亚全集》
+关于习主席的书
+《平凡的世界》
+
+
+
+
+### 已经听完的书
+《褚时健传》
+
+
+
 ## 已完成
 
 
@@ -197,5 +222,10 @@ put 手机 down，每次省几个小时，可以产生 huge impact
 
 
 群里再说，就是 C++ 了，1、说毛主席链接；2、靠动力不行，越来越少，这种方法越来越有力量  
+
+
+说 marginal ajustment  
+
+
 
 
