--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -191,15 +191,15 @@ d2l 一章，视频
 2、刷牙的时候听演讲  
 3、散步的时候听书，一年多读 50 本书。做饭洗衣服的时候听书  
 4、吃饭的时候读论文  
-
+5、读论文，只读第一张图片  
 
 
 
 ### 要听的书：已经读完的；没读过的不难的非名著；一直读不下去的；
-四大名著
-《莎士比亚全集》
-关于习主席的书
-《平凡的世界》
+四大名著  
+《莎士比亚全集》  
+关于习主席的书  
+《平凡的世界》  
 
 
 
@@ -215,7 +215,7 @@ d2l 一章，视频
 <br>
 <br>
 
-洗衣服刷牙做饭听一遍，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
+刷牙听一遍，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
 <br>
 
 
