--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -192,7 +192,7 @@ d2l 一章，视频
 3、散步的时候听书，一年多读 50 本书。做饭洗衣服的时候听书  
 4、吃饭的时候读论文  
 5、读论文，只读第一张图片  
-
+6、睡前洗澡听书  
 
 
 ### 要听的书：已经读完的；没读过的不难的非名著；一直读不下去的；
