--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -1,7 +1,5 @@
 
-拥有极强的执行力，一直是我的最高理想。  
-
-现在的表现超出了我想象之中能达到的最完美的状态。    
+拥有极强的执行力，一直是我的最高理想。现在的表现超出了我想象之中能达到的最完美的状态。    
 
 是有效的，只要自己想起来就能做成，所以肯定是有效的。  
 
@@ -191,7 +189,7 @@ d2l 一章，视频
 3、散步的时候听书，一年多读 50 本书。做饭洗衣服的时候听书  
 4、吃饭的时候读论文  
 5、读论文，只读第一张图片  
-6、睡前洗澡听书  
+6、睡前洗澡听书，要磨合  
 7、学习只听纯音乐  
 
 
