--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -37,7 +37,7 @@
 
 ### 演讲内容
 
-任务太多让人望而却步，要转化为 5 分钟的小目标，**能完成一个格子，就没有理由不能完成一幅画。**  
+任务太大太难让人望而却步，要转化为 5 分钟的小目标，**能完成一个格子，就没有理由不能完成一幅画。**  
 
 **如果目标是读五个章节书，我不会当成五章，也不会当成一章，而是分解成我能完成的任务，每个任务只需要专注 5 分钟。能读多少就读多少。完成以后再做下一个 5 分钟的任务，可以是不同的任务，可以是不同的学科。**  
 
@@ -190,7 +190,7 @@ d2l 一章，视频
 4、吃饭的时候读论文  
 5、读论文，只读第一张图片  
 6、睡前洗澡听书，要磨合  
-7、学习只听纯音乐  
+7、学习只听纯音乐，愿意听就听，不愿意听就听 5 分钟    
 
 
 ### 要听的书：已经读完的；没读过的不难的非名著；一直读不下去的；
