--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -191,6 +191,7 @@ d2l 一章，视频
 5、读论文，只读第一张图片  
 6、睡前洗澡听书，要磨合  
 7、学习只听纯音乐，愿意听就听，不愿意听就听 5 分钟    
+8、想看视频玩手机，就自动跳转到读书  
 
 
 ### 要听的书：已经读完的；没读过的不难的非名著；一直读不下去的；
