--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -27,7 +27,7 @@
 自制力、执行力、意志力全都有了，而且是以一种极其轻松的方式实现的。  
 
 
-原理：如果能画一个格子，就能画三个、六个、九个，然后一千个、一万个、一百万个  
+原理：如果能画一个格子，就能画两个、三个、九个，然后一千个、一万个、一百万个  
 
 **这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**  
 
