--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -188,10 +188,12 @@ d2l 一章，视频
 2、刷牙的时候听演讲  
 3、散步的时候听书，一年多读 50 本书。做饭洗衣服的时候听书  
 4、吃饭的时候读论文  
-5、读论文，只读第一张图片  
+5、读论文，只读第一张图片；想想马斯克 pathetic    
 6、睡前洗澡听书，要磨合  
 7、学习只听纯音乐，愿意听就听，不愿意听就听 5 分钟    
 8、想看视频玩手机，就自动跳转到读书  
+9、少看国际政治，对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
+
 
 
 ### 要听的书：已经读完的；没读过的不难的非名著；一直读不下去的；
@@ -199,6 +201,7 @@ d2l 一章，视频
 《莎士比亚全集》  
 关于习主席的书  
 《平凡的世界》  
+《马斯克传》  
 
 
 
