--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -184,15 +184,16 @@ d2l 一章，视频
 
 
 ## marginal ajustment to my daily routine
+0.1、不带主手机到床上，**只读论文**；一年能省 1000 个小时，能多读 300 篇论文   
 1、put 手机 down，每次省几个小时，可以产生 huge impact  
-2、刷牙的时候听演讲  
+2、刷牙洗澡的时候听演讲，要磨合    
 3、散步的时候听书，一年多读 50 本书。做饭洗衣服的时候听书  
 4、吃饭的时候读论文  
-5、读论文，只读第一张图片；想想马斯克 pathetic    
-6、睡前洗澡听书，要磨合  
+5、通读相册；只读第一张图片；想想马斯克 pathetic    
+6、少看国际政治，转向科学；对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
 7、学习只听纯音乐，愿意听就听，不愿意听就听 5 分钟    
 8、想看视频玩手机，就自动跳转到读书  
-9、少看国际政治，对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
+9、
 
 
 
