--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -5,20 +5,9 @@
 
 试了那么多都不行，这个可以，就发挥到极致，超过作者。不管它行不行，先做个一年再说。  
 
-四种情况下，条件反射想起来，转到读书和运动。  
-**1、压力大**  
+效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成两个目标，增加信心，再增加到作者的一年十几个。  
 
-**2、学不动**  
-
-**3、做的事情的启动项**  
-
-**4、不该做的事情，玩手机看视频，终止**  
-看视频自动转到 Ian、 C++。  
-
-
-效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成几个目标，增加信心，再增加到作者的一年十几个。  
-
-再也不用受这些苦了，一定可以找到一个非常好的，非常值得去去做，极其划算。  
+再也不用受这些苦了，心态完全不一样，轻松百万倍。一定可以找到一个非常好的能谱仪，非常值得去做，极其划算。  
 
 是一种方法，可以用在一生之中的所有事情上。彻底改变了一生，彻底改变了命运。苦苦寻找多年付出极大努力，全部都以失败告终，一直是不可达到的目标。  
 
@@ -26,18 +15,15 @@
 
 自制力、执行力、意志力全都有了，而且是以一种极其轻松的方式实现的。  
 
-
 原理：如果能画一个格子，就能画两个、三个、九个，然后一千个、一万个、一百万个  
 
-**这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**  
-
-**原来只能每天一两个小时，分解还是最快的。而且心态完全不一样，轻松百倍。**  
+**这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**    
 
 <br>
 
 ### 演讲内容
 
-任务太大太难让人望而却步，要转化为 5 分钟的小目标，**能完成一个格子，就没有理由不能完成一幅画。**  
+**能完成一个格子，就没有理由不能完成一幅画。**  
 
 **如果目标是读五个章节书，我不会当成五章，也不会当成一章，而是分解成我能完成的任务，每个任务只需要专注 5 分钟。能读多少就读多少。完成以后再做下一个 5 分钟的任务，可以是不同的任务，可以是不同的学科。**  
 
@@ -75,9 +61,9 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 是方法，可以决定几百万件事  
 
-因为事情非常多，所以一点 marginal ajustment，会产生极为巨大的影响  
+因为事情非常多，所以一点 marginal ajustment，会产生极为巨大的影响，比如看手机，比如每天睡觉不带手机，每一天  
 
-打网球，提高了一点点，奖励变成了原来的 56 倍  
+打网球，提高了一点点，奖励从 25 万变成了 1400 万  
 
 把这些 big concept，这些 complex ideas 和 big assignments, you break them down to much more manageable tasks.  
 
@@ -184,16 +170,15 @@ d2l 一章，视频
 
 
 ## marginal ajustment to my daily routine
-0.1、不带主手机到床上，**只读论文**；一年能省 1000 个小时，能多读 300 篇论文   
-1、put 手机 down，每次省几个小时，可以产生 huge impact  
-2、刷牙洗澡的时候听演讲，要磨合    
-3、散步的时候听书，一年多读 50 本书。做饭洗衣服的时候听书  
-4、吃饭的时候读论文  
-5、通读相册；只读第一张图片；想想马斯克 pathetic    
+1、put 手机 down；一年几千次，每天省几个小时，可以产生 huge impact  
+2、散步的时候听书；一年多读 50 本书。做饭洗衣服的时候听书  
+3、吃饭的时候读论文  
+4、刷牙洗澡的时候听演讲，要磨合    
+5、不带主手机到床上；一年能省 1000 个小时；读 C++；**读论文**；能多读 300 篇论文   
 6、少看国际政治，转向科学；对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
 7、学习只听纯音乐，愿意听就听，不愿意听就听 5 分钟    
 8、想看视频玩手机，就自动跳转到读书  
-9、
+9、通读相册；只读第一张图片；一击即中；想想马斯克 pathetic    
 
 
 
@@ -203,8 +188,6 @@ d2l 一章，视频
 关于习主席的书  
 《平凡的世界》  
 《马斯克传》  
-
-
 
 
 ### 已经听完的书
