--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -215,3 +215,13 @@ d2l 一章，视频
 
 mp3 格式，发邮箱，iPhone 可以用 iTunes，刷牙的时候听  
 
+
+
+https://www.youtube.com/watch?v=TQMbvJNRpLE&t=46s  
+
+每个月评论一次  
+
+视频看了 30 遍  
+读了 5 本书  
+读论文  
+跑步  
