--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -217,11 +217,17 @@ mp3 格式，发邮箱，iPhone 可以用 iTunes，刷牙的时候听
 
 
 
+
+
+### 每月 15 号评论一次，坚持两年，在自己底下写回复  
 https://www.youtube.com/watch?v=TQMbvJNRpLE&t=46s  
 
-每个月评论一次  
+在看这个视频之前，我从来没有完成过自己的目标，这个视频改变了我的人生，未来两年我会每个月写一次评论，来展示这个月做成了什么事情  
 
+第一句，这是我看完这个视频的第一个月，这是我这个月做成的事情
 视频看了 30 遍  
 读了 5 本书  
 读论文  
 跑步  
+
+
