--- a/已完成.md
+++ b/已完成.md
@@ -1,4 +1,25 @@
 
+
 ### 第一个月
 
+
+
+
+
+### 当前目标
+项目每天 6 个  
+论文 3 篇  
+李航一章  
+nndl  
+C++  
+收拾房间  
+d2l 一章，视频  
+
+<br>
+
+### 长期目标  
+读名著  
+读论文  
+运动  
+写文章  
 
