--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -7,7 +7,7 @@
 
 效果实在是太诱人了，无所不能，做一件成一件。即使是难一千倍也要是值得的，更何况这么简单轻松容易。是已经在实践中证明了可行的。完成读书和减肥目标。先 1 年完成两个目标，增加信心，再增加到作者的一年十几个。  
 
-再也不用受这些苦了，心态完全不一样，轻松百万倍。一定可以找到一个非常好的能谱仪，非常值得去做，极其划算。  
+再也不用受这些苦了，心态完全不一样，轻松百万倍。一定可以找到一个非常好的能谱仪，非常值得去做，极其划算。清单中的每一条都难如登天的永远都不到的内容，一多半都可以用这一个方法做到。比提高 pain treshold 容易一万倍。    
 
 是一种方法，可以用在一生之中的所有事情上。彻底改变了一生，彻底改变了命运。苦苦寻找多年付出极大努力，全部都以失败告终，一直是不可达到的目标。  
 
@@ -90,40 +90,13 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 4、因为目标太小，小到了不可能失败。  
 5、因为一直成功，所以越来越有成就感，越往后越有劲头。  
 6、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
-7、可以消除焦虑。  
+7、可以消除焦虑，一旦开始做就非常安心，非常愉快。  
 
 
 <br>
 
-
-<br>
-清单中的每一条都难如登天的永远都不到的内容，一多半几十条，都可以用这一个方法做到。比提高 pain treshold 容易一万倍。  
-
-
 <br>
 
-### 当前目标
-项目每天 6 个  
-论文 3 篇  
-李航一章  
-nndl  
-C++  
-背背佳  
-收拾房间  
-
-
-d2l 一章，视频  
-
-<br>
-
-### 长期目标  
-读名著  
-读论文  
-运动  
-写文章  
-
-
-<br>
 <br>
 
 
@@ -172,9 +145,9 @@ d2l 一章，视频
 ## marginal ajustment to my daily routine
 1、put 手机 down；一年几千次，每天省几个小时，可以产生 huge impact  
 2、散步的时候听书；一年多读 50 本书。做饭洗衣服的时候听书  
-3、吃饭的时候读论文  
-4、刷牙洗澡的时候听演讲，要磨合    
-5、不带主手机到床上；一年能省 1000 个小时；读 C++；**读论文**；能多读 300 篇论文   
+3、吃饭的时候读论文；一天 3 页，一年 100 篇；  
+4、刷牙洗澡的时候听演讲，要磨合；先听一年再说；完成目标，效果好的话再听一年；    
+5、不带主手机到床上；一年能省 1000 个小时；读 C++；读 Linux；**读论文**；能多读 300 篇论文   
 6、少看国际政治，转向科学；对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
 7、学习只听纯音乐，愿意听就听，不愿意听就听 5 分钟    
 8、想看视频玩手机，就自动跳转到读书  
@@ -199,13 +172,8 @@ d2l 一章，视频
 
 
 <br>
+
 <br>
-
-刷牙听一遍，听一年，背下来，完成读书和减肥目标。一年以后，效果好的话就再听一年。  
-<br>
-
-
-
 
 群里再说，就是 C++ 了，1、说毛主席链接；2、靠动力不行，越来越少，这种方法越来越有力量  
 
@@ -214,7 +182,6 @@ d2l 一章，视频
 
 
 mp3 格式，发邮箱，iPhone 可以用 iTunes，刷牙的时候听  
-
 
 
 
