--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -95,10 +95,6 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 <br>
 
-<br>
-
-<br>
-
 
 ### 读书：
 今年 50 本，以后每年 50 本；零散时间写文章；用公众号证明再说，没理由会做不成；知乎写 50 篇实践证明后再说；  
@@ -175,8 +171,12 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 <br>
 
-群里再说，就是 C++ 了，1、说毛主席链接；2、靠动力不行，越来越少，这种方法越来越有力量  
+群里说，其实最重要的一个秘诀就是每天听一遍，因为不提醒就很容易忘，忘了就不可能在实际中应用。  
 
+但丁在《神曲》中说：理解了的道理而没有牢记下来就不称其为知识。  
+
+
+C++ 了，1、说毛主席链接；2、靠动力不行，越来越少，这种方法越来越有力量  
 
 说 marginal ajustment  
 
